src/parser/SVMParser.java
// Generated from SVM.g4 by ANTLR 4.4
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, PUSH=5, POP=6, TOP=7, LI=8, MOVE=9, LW=10, 
		SW=11, LB=12, SB=13, ADD=14, ADDI=15, SUB=16, SUBI=17, MULT=18, MULTI=19, 
		DIV=20, DIVI=21, BGT=22, BGEQ=23, BLEQ=24, BLT=25, BNE=26, AND=27, OR=28, 
		NOT=29, NEG=30, PRINT=31, RET=32, BEQ=33, LABEL_INSTRUCTION=34, JAL=35, 
		BRANCH=36, JR=37, HALT=38, UNDERSCORE=39, NUMBER=40, LABEL=41, REG=42, 
		WHITESP=43, LINECOMMENTS=44, ERR=45;
	public static final String[] tokenNames = {
		"<INVALID>", "'<-'", "'('", "')'", "':'", "'push'", "'pop'", "'top'", 
		"'li'", "'move'", "'lw'", "'sw'", "'lb'", "'sb'", "'add'", "'addi'", "'sub'", 
		"'subi'", "'mult'", "'multi'", "'div'", "'divi'", "'bgt'", "'bgeq'", "'bleq'", 
		"'blt'", "'bne'", "'and'", "'or'", "'not'", "'neg'", "'print'", "'ret'", 
		"'beq'", "'label'", "'jal'", "'branch'", "'jr'", "'halt'", "'_'", "NUMBER", 
		"LABEL", "REG", "WHITESP", "LINECOMMENTS", "ERR"
	};
	public static final int
		RULE_assembly = 0, RULE_instruction = 1, RULE_push = 2, RULE_pop = 3, 
		RULE_top = 4, RULE_li = 5, RULE_move = 6, RULE_lw = 7, RULE_sw = 8, RULE_lb = 9, 
		RULE_sb = 10, RULE_add = 11, RULE_addi = 12, RULE_sub = 13, RULE_subi = 14, 
		RULE_mult = 15, RULE_multi = 16, RULE_div = 17, RULE_divi = 18, RULE_bgt = 19, 
		RULE_bgeq = 20, RULE_bleq = 21, RULE_blt = 22, RULE_bne = 23, RULE_and = 24, 
		RULE_or = 25, RULE_not = 26, RULE_neg = 27, RULE_print = 28, RULE_ret = 29, 
		RULE_beq = 30, RULE_label = 31, RULE_jal = 32, RULE_branch = 33, RULE_jr = 34, 
		RULE_halt = 35;
	public static final String[] ruleNames = {
		"assembly", "instruction", "push", "pop", "top", "li", "move", "lw", "sw", 
		"lb", "sb", "add", "addi", "sub", "subi", "mult", "multi", "div", "divi", 
		"bgt", "bgeq", "bleq", "blt", "bne", "and", "or", "not", "neg", "print", 
		"ret", "beq", "label", "jal", "branch", "jr", "halt"
	};

	@Override
	public String getGrammarFileName() { return "SVM.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AssemblyContext extends ParserRuleContext {
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public AssemblyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assembly; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAssembly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssemblyContext assembly() throws RecognitionException {
		AssemblyContext _localctx = new AssemblyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_assembly);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUSH) | (1L << POP) | (1L << LI) | (1L << MOVE) | (1L << LW) | (1L << SW) | (1L << LB) | (1L << SB) | (1L << ADD) | (1L << ADDI) | (1L << SUB) | (1L << SUBI) | (1L << MULT) | (1L << MULTI) | (1L << DIV) | (1L << DIVI) | (1L << BGT) | (1L << BGEQ) | (1L << BLEQ) | (1L << BLT) | (1L << BNE) | (1L << AND) | (1L << OR) | (1L << NOT) | (1L << NEG) | (1L << PRINT) | (1L << RET) | (1L << BEQ) | (1L << LABEL_INSTRUCTION) | (1L << JAL) | (1L << BRANCH) | (1L << JR) | (1L << HALT) | (1L << REG))) != 0)) {
				{
				{
				setState(72); instruction();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public PushContext push() {
			return getRuleContext(PushContext.class,0);
		}
		public TopContext top() {
			return getRuleContext(TopContext.class,0);
		}
		public LiContext li() {
			return getRuleContext(LiContext.class,0);
		}
		public LbContext lb() {
			return getRuleContext(LbContext.class,0);
		}
		public JalContext jal() {
			return getRuleContext(JalContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public NegContext neg() {
			return getRuleContext(NegContext.class,0);
		}
		public BltContext blt() {
			return getRuleContext(BltContext.class,0);
		}
		public BeqContext beq() {
			return getRuleContext(BeqContext.class,0);
		}
		public MultiContext multi() {
			return getRuleContext(MultiContext.class,0);
		}
		public SubiContext subi() {
			return getRuleContext(SubiContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public BranchContext branch() {
			return getRuleContext(BranchContext.class,0);
		}
		public BneContext bne() {
			return getRuleContext(BneContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public SwContext sw() {
			return getRuleContext(SwContext.class,0);
		}
		public BleqContext bleq() {
			return getRuleContext(BleqContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public DiviContext divi() {
			return getRuleContext(DiviContext.class,0);
		}
		public BgtContext bgt() {
			return getRuleContext(BgtContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public JrContext jr() {
			return getRuleContext(JrContext.class,0);
		}
		public BgeqContext bgeq() {
			return getRuleContext(BgeqContext.class,0);
		}
		public SbContext sb() {
			return getRuleContext(SbContext.class,0);
		}
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public PopContext pop() {
			return getRuleContext(PopContext.class,0);
		}
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public HaltContext halt() {
			return getRuleContext(HaltContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public DivContext div() {
			return getRuleContext(DivContext.class,0);
		}
		public LwContext lw() {
			return getRuleContext(LwContext.class,0);
		}
		public AddiContext addi() {
			return getRuleContext(AddiContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			switch (_input.LA(1)) {
			case PUSH:
				{
				setState(78); push();
				}
				break;
			case POP:
				{
				setState(79); pop();
				}
				break;
			case REG:
				{
				setState(80); top();
				}
				break;
			case LI:
				{
				setState(81); li();
				}
				break;
			case MOVE:
				{
				setState(82); move();
				}
				break;
			case LW:
				{
				setState(83); lw();
				}
				break;
			case SW:
				{
				setState(84); sw();
				}
				break;
			case LB:
				{
				setState(85); lb();
				}
				break;
			case SB:
				{
				setState(86); sb();
				}
				break;
			case ADD:
				{
				setState(87); add();
				}
				break;
			case ADDI:
				{
				setState(88); addi();
				}
				break;
			case SUB:
				{
				setState(89); sub();
				}
				break;
			case SUBI:
				{
				setState(90); subi();
				}
				break;
			case MULT:
				{
				setState(91); mult();
				}
				break;
			case MULTI:
				{
				setState(92); multi();
				}
				break;
			case DIV:
				{
				setState(93); div();
				}
				break;
			case DIVI:
				{
				setState(94); divi();
				}
				break;
			case BGT:
				{
				setState(95); bgt();
				}
				break;
			case BGEQ:
				{
				setState(96); bgeq();
				}
				break;
			case BLEQ:
				{
				setState(97); bleq();
				}
				break;
			case BLT:
				{
				setState(98); blt();
				}
				break;
			case BNE:
				{
				setState(99); bne();
				}
				break;
			case AND:
				{
				setState(100); and();
				}
				break;
			case OR:
				{
				setState(101); or();
				}
				break;
			case NOT:
				{
				setState(102); not();
				}
				break;
			case NEG:
				{
				setState(103); neg();
				}
				break;
			case PRINT:
				{
				setState(104); print();
				}
				break;
			case RET:
				{
				setState(105); ret();
				}
				break;
			case BEQ:
				{
				setState(106); beq();
				}
				break;
			case LABEL_INSTRUCTION:
				{
				setState(107); label();
				}
				break;
			case JAL:
				{
				setState(108); jal();
				}
				break;
			case BRANCH:
				{
				setState(109); branch();
				}
				break;
			case JR:
				{
				setState(110); jr();
				}
				break;
			case HALT:
				{
				setState(111); halt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PushContext extends ParserRuleContext {
		public Token src;
		public TerminalNode PUSH() { return getToken(SVMParser.PUSH, 0); }
		public TerminalNode REG() { return getToken(SVMParser.REG, 0); }
		public PushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_push; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitPush(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PushContext push() throws RecognitionException {
		PushContext _localctx = new PushContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_push);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(PUSH);
			setState(115); ((PushContext)_localctx).src = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PopContext extends ParserRuleContext {
		public TerminalNode POP() { return getToken(SVMParser.POP, 0); }
		public PopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitPop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PopContext pop() throws RecognitionException {
		PopContext _localctx = new PopContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(POP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopContext extends ParserRuleContext {
		public Token destination;
		public TerminalNode TOP() { return getToken(SVMParser.TOP, 0); }
		public TerminalNode REG() { return getToken(SVMParser.REG, 0); }
		public TopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitTop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopContext top() throws RecognitionException {
		TopContext _localctx = new TopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_top);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); ((TopContext)_localctx).destination = match(REG);
			setState(120); match(T__3);
			setState(121); match(TOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiContext extends ParserRuleContext {
		public Token destination;
		public Token numbers;
		public TerminalNode LI() { return getToken(SVMParser.LI, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public TerminalNode REG() { return getToken(SVMParser.REG, 0); }
		public LiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_li; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitLi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiContext li() throws RecognitionException {
		LiContext _localctx = new LiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_li);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(LI);
			setState(124); ((LiContext)_localctx).destination = match(REG);
			setState(125); ((LiContext)_localctx).numbers = match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveContext extends ParserRuleContext {
		public Token destination;
		public Token departure;
		public TerminalNode MOVE() { return getToken(SVMParser.MOVE, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public MoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_move; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitMove(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoveContext move() throws RecognitionException {
		MoveContext _localctx = new MoveContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_move);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(MOVE);
			setState(128); ((MoveContext)_localctx).destination = match(REG);
			setState(129); ((MoveContext)_localctx).departure = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LwContext extends ParserRuleContext {
		public Token register1;
		public Token offset;
		public Token register2;
		public TerminalNode LW() { return getToken(SVMParser.LW, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public LwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lw; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitLw(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LwContext lw() throws RecognitionException {
		LwContext _localctx = new LwContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lw);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); match(LW);
			setState(132); ((LwContext)_localctx).register1 = match(REG);
			setState(133); ((LwContext)_localctx).offset = match(NUMBER);
			setState(134); match(T__2);
			setState(135); ((LwContext)_localctx).register2 = match(REG);
			setState(136); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwContext extends ParserRuleContext {
		public Token register1;
		public Token offset;
		public Token register2;
		public TerminalNode SW() { return getToken(SVMParser.SW, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public SwContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sw; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitSw(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwContext sw() throws RecognitionException {
		SwContext _localctx = new SwContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sw);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(SW);
			setState(139); ((SwContext)_localctx).register1 = match(REG);
			setState(140); ((SwContext)_localctx).offset = match(NUMBER);
			setState(141); match(T__2);
			setState(142); ((SwContext)_localctx).register2 = match(REG);
			setState(143); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LbContext extends ParserRuleContext {
		public Token register1;
		public Token offset;
		public Token register2;
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public TerminalNode LB() { return getToken(SVMParser.LB, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public LbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lb; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitLb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LbContext lb() throws RecognitionException {
		LbContext _localctx = new LbContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lb);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); match(LB);
			setState(146); ((LbContext)_localctx).register1 = match(REG);
			setState(147); ((LbContext)_localctx).offset = match(NUMBER);
			setState(148); match(T__2);
			setState(149); ((LbContext)_localctx).register2 = match(REG);
			setState(150); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SbContext extends ParserRuleContext {
		public Token register1;
		public Token offset;
		public Token register2;
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public TerminalNode SB() { return getToken(SVMParser.SB, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public SbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sb; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitSb(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SbContext sb() throws RecognitionException {
		SbContext _localctx = new SbContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sb);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(SB);
			setState(153); ((SbContext)_localctx).register1 = match(REG);
			setState(154); ((SbContext)_localctx).offset = match(NUMBER);
			setState(155); match(T__2);
			setState(156); ((SbContext)_localctx).register2 = match(REG);
			setState(157); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public Token destination;
		public Token register1;
		public Token register2;
		public TerminalNode ADD() { return getToken(SVMParser.ADD, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAdd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_add);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); match(ADD);
			setState(160); ((AddContext)_localctx).destination = match(REG);
			setState(161); ((AddContext)_localctx).register1 = match(REG);
			setState(162); ((AddContext)_localctx).register2 = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddiContext extends ParserRuleContext {
		public Token destination;
		public Token register1;
		public Token value;
		public TerminalNode ADDI() { return getToken(SVMParser.ADDI, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public AddiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitAddi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddiContext addi() throws RecognitionException {
		AddiContext _localctx = new AddiContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_addi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(ADDI);
			setState(165); ((AddiContext)_localctx).destination = match(REG);
			setState(166); ((AddiContext)_localctx).register1 = match(REG);
			setState(167); ((AddiContext)_localctx).value = match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public Token destination;
		public Token register1;
		public Token register2;
		public TerminalNode SUB() { return getToken(SVMParser.SUB, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitSub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169); match(SUB);
			setState(170); ((SubContext)_localctx).destination = match(REG);
			setState(171); ((SubContext)_localctx).register1 = match(REG);
			setState(172); ((SubContext)_localctx).register2 = match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubiContext extends ParserRuleContext {
		public Token destination;
		public Token register1;
		public Token value;
		public TerminalNode SUBI() { return getToken(SVMParser.SUBI, 0); }
		public TerminalNode NUMBER() { return getToken(SVMParser.NUMBER, 0); }
		public List<TerminalNode> REG() { return getTokens(SVMParser.REG); }
		public TerminalNode REG(int i) {
			return getToken(SVMParser.REG, i);
		}
		public SubiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SVMVisitor ) return ((SVMVisitor<? extends T>)visitor).visitSubi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubiContext subi() throws RecognitionException {
		SubiContext _localctx = new SubiContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_subi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(SUBI);
			setState(175); ((SubiContext)_localctx).destination = match(REG);
			setState(176); ((SubiContext)_localctx).register1 = match(REG);
			setState(177); ((SubiContext)_localctx).value = match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
